<resources>
    <string name="app_name">Student Survey</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="BASE_URL">http://10.0.2.2:8000</string>
    <string name="OK">OK</string>
    <string name="DEBUGING_TAG">DEBUGING_TAG</string>
    <string name="label_radio_button_male">Male</string>
    <string name="label_radio_button_female">Female</string>
    <string name="label_radio_button_first">1st</string>
    <string name="label_radio_button_second">2nd</string>
    <string name="label_radio_button_third">3rd</string>
    <string name="label_radio_button_forth">4th</string>
    <string name="label_group_study_time">Group Stydy Time</string>
    <string name="label_absent_time">Absent Time</string>
    <string name="label_radio_button_yes">Yes</string>
    <string name="label_radio_button_no">No</string>
    <string name="label_last_cgpa">Last Semester SGPA</string>
    <string name="label_radio_button_hsc">HSC</string>
    <string name="label_radio_button_ssc">SSC</string>
    <string name="label_radio_button_jsc">JSC</string>
    <string name="label_radio_button_psc">PSC</string>
    <string name="label_radio_button_hsc_or_above">Above HSC</string>
    <string name="label_radio_button_others">Other</string>
    <string name="label_num_drop_semester">Number Of Drop Semester</string>
    <string name="label_due_amount">Due Tution Fee</string>
    <string name="survey_welcome_message">"Welcome to our system. This system's aim is to predict dropout chances and determine the performance of the students based on their given data. So please give your data and get your performance level and dropout chances."</string>
    <string name="label_radio_button_graduation">Graduation</string>
    <string-array name="bd_districts">
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Jamalpur</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Mymensingh</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Netrokona</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Sherpur</item>
        <item>Tangail</item>
        <item>Bogura</item>
        <item>Joypurhat</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Nawabganj</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajgonj</item>
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
        <item>Barguna</item>
        <item>Barishal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chattogram</item>
        <item>Cumilla</item>
        <item>Cox\'s Bazar</item>
        <item>Feni</item>
        <item>Khagrachari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
        <item>Habiganj</item>
        <item>Maulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jashore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
    </string-array>
    <string name="title_activity_about">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="gender">Gender<font color='#B50303'> *</font></string>
    <string name="nationality">Nationality<font color='#B50303'> *</font></string>
    <string name="placeofbirth">Place Of Birth(District)<font color='#B50303'> *</font></string>
    <string name="institute_name">Institute Name<font color='#B50303'> *</font></string>
    <string name="dept_name">Department Name<font color='#B50303'> *</font></string>
    <string name="yer_on_going">Year (On going/Current)<font color='#B50303'> *</font></string>
    <string name="grp_study_time">How much time (hour) spend for group study? (Monthly Basis) <font color='#B50303'> *</font></string>
    <string name="absent_time">How much days (hour) you were absent in semester?(On average) <font color='#B50303'> *</font></string>
    <string name="do_u_asked_question">Do you ask questions in the class frequently? <font color='#B50303'> *</font></string>
    <string name="do_u_use_additional_material">Do you use additional course material for study? <font color='#B50303'> *</font></string>
    <string name="result_of_last_semester">Result of the Last Semester (SGPA) <font color='#B50303'> *</font></string>
    <string name="meet_with_advisor">Did you meet with your advisor regularly? <font color='#B50303'> *</font></string>
    <string name="r_parents_satisfy">Are your parents satisfied with your result?<font color='#B50303'> *</font></string>
    <string name="parents_edu_status">Your Parent\'s highest Education Degree?<font color='#B50303'> *</font></string>
    <string name="semester_u_drop">How many semesters did you drop? <font color='#B50303'> *</font></string>
    <string name="reason_behind_it">If you have dropped any semester than what is the reason behind it?</string>
    <string name="due_amount">Due Amount of Tuition Fee<font color='#B50303'> *</font></string>
    <string name="bellow_jsc">Bellow Jsc</string>
</resources>