<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".fragment.Page2Fragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="9dp"
        android:background="@color/cardview_background"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/yearCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:background="@color/cardview_background"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Year (On going/Current)*"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <RadioGroup
                    android:id="@+id/radioGroupYear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radio_button_first"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_radio_button_first"/>
                    <RadioButton
                        android:id="@+id/radio_button_second"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_radio_button_second"/>
                    <RadioButton
                        android:id="@+id/radio_button_third"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_radio_button_third"/>
                    <RadioButton
                        android:id="@+id/radio_button_forth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_radio_button_forth"/>

                </RadioGroup>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/yearRadioErrorView"
                    android:visibility="gone"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/error"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"

                        android:textColor="@android:color/holo_red_dark"
                        android:text="This field is required"

                        />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/yearCard"
            android:id="@+id/grpStudyCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:background="@color/cardview_background"
            android:layout_marginTop="@dimen/cardview_margin_top"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="How much time (hour) spend for group study? (Monthly Basis) *"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groupStudyTimeOutlinedTextFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_group_study_time"
                    android:clickable="true"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    app:errorEnabled="true"
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groupStudyTimeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/grpStudyCard"
            android:id="@+id/absentInSemesterCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:background="@color/cardview_background"
            android:layout_marginTop="@dimen/cardview_margin_top"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="How much days (hour) you were absent in semester?(On average) *"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/absentInSemesterOutlinedTextFieldLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_absent_time"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    app:errorEnabled="true"
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/absentInSemesterEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        />

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/absentInSemesterCard"
            android:id="@+id/askedQuestionFrequentlyCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:background="@color/cardview_background"
            android:layout_marginTop="@dimen/cardview_margin_top"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Do you ask questions in the class frequently? *"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <RadioGroup
                    android:id="@+id/radioGroupAskedQuestionFrequently"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radio_button_asked_question_yes"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_radio_button_yes"/>
                    <RadioButton
                        android:id="@+id/radio_button_asked_question_no"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_radio_button_no"/>

                </RadioGroup>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/askedQuestionRadioErrorView"
                    android:visibility="gone"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/error"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"

                        android:textColor="@android:color/holo_red_dark"
                        android:text="This field is required"

                        />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>




    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>