<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.Page1Fragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="9dp"
        android:background="@drawable/page_background"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/genderCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:background="@color/cardview_background"
            >
            <LinearLayout
                android:id="@+id/radioGroupLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                app:errorEnabled="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <RadioGroup
                    android:id="@+id/radioGroupGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <RadioButton
                        android:id="@+id/radio_button_male"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_radio_button_male"/>
                    <RadioButton
                        android:id="@+id/radio_button_female"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/label_radio_button_female"/>

                </RadioGroup>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="33dp"
                    android:orientation="horizontal"
                    android:layout_marginLeft="5dp"
                    android:id="@+id/genderRadioErrorView"
                    android:visibility="gone"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/error"
                        android:layout_gravity="center"
                        />
                    <TextView
                        android:layout_marginLeft="5dp"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"

                        android:textColor="@android:color/holo_red_dark"
                        android:text="This field is required"

                        />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/genderCard"
            android:id="@+id/nationalityCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:layout_marginTop="9dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationality"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nationalityTextLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    app:errorEnabled="true"
                <AutoCompleteTextView
                    android:text="Select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:id="@+id/nationality_drop_down"

                    />

            </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/nationalityCard"
            android:id="@+id/placeOfBirthCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:layout_marginTop="9dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeofbirth"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/placeOfBirthTextLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    app:errorEnabled="true"
                    <AutoCompleteTextView
                        android:text="Select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:id="@+id/placeOfBirthDropDown"

                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/placeOfBirthCard"
            android:id="@+id/instituteNameCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:layout_marginTop="9dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/institute_name"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/instituteNameTextLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    app:errorEnabled="true"
                    <AutoCompleteTextView
                        android:text="Select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:id="@+id/instituteNameDropDown"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/instituteNameCard"
            android:id="@+id/departmentNameCard"
            app:cardCornerRadius="9dp"
            android:elevation="22dp"
            android:layout_marginTop="9dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/cardview_padding"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dept_name"
                    android:textSize="@dimen/question_text_size"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/question_text_bottom_margin"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/departmentNameTextLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
                    app:errorEnabled="true"
                    <AutoCompleteTextView
                        android:text="Select"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:id="@+id/departmentNameDropDown"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>